[package]
name = "myshell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "myshell"

[dependencies]
crossterm = "0.23"
rlua = "0.19"
prettytable-rs = "0.8"
is_executable = "1.0"
home = "0.5"
tree-sitter = "0.19"
tree-sitter-lua = "0.0.9"
#tree-sitter-lua = { path = "./tree-sitter-lua" }
